fix button alignment between Chrome and Firefox

--- a/addon/styles/button.scss
+++ b/addon/styles/button.scss
@@ -7,12 +7,15 @@ button[type=reset] {
   grid-template-columns: auto auto auto;
   box-shadow: 0 1px 2px 1px rgba($black, 0.20);
   border-radius: 4px;
-  height: 2rem;
-  border: 0;
-  padding: 0.5rem 1rem;
-  transition-property: padding, box-shadow, color, border, transform;
+  height: calc(2rem + 2px);
+  border-width: 1px;
+  border-style: solid;
+  // Offset to optically center the text
+  padding: 0.4rem 1rem 0.6rem;
+  transition-property: background, padding, box-shadow, color, border, border-color, transform;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.79, 0.14, 0.15, 0.86);
+  overflow: hidden;
 
   &:hover:not(:disabled) {
     box-shadow: 0 2px 4px 2px rgba($black, 0.2);
@@ -51,15 +54,35 @@ button[type=reset] {
   &[type=submit] {
     background: $black;
     color: $white;
+    border-color: $black;
+
+    &:focus {
+      outline: none;
+      background: $accent;
+      border-color: $accent;
+    }
   }
 
   &[type=reset] {
     background: $white;
     color: $black;
-    border: 1px solid $white;
+    border-color: $white;
+    // Optically fix the height of the cancel button
+    height: calc(2rem + 1px);
 
     &:active {
-      border: 1px solid #EEEEE;
+      border-color: $heather;
     }
+
+    &:focus {
+      outline: none;
+      color: $white;
+      background: $accent;
+      border-color: $accent;
+    }
+  }
+
+  &::-moz-focus-inner {
+    border: 0;
   }
 }
