--- a/addon/styles/submit-button.scss
+++ b/addon/styles/submit-button.scss
@@ -1,8 +1,5 @@
 button[type=submit].submit-button {
-  background: $accent;
   text-align: left;
-  position: relative;
-  top: 0.25rem;
 
   .liquid-container, .liquid-child {
     height: 1rem;
